# remote-ac-client

./: .flake8  Pipfile  Procfile  README.md  app.py  dht.py  ir_blaster.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  flask.yml  linters.yml
services/: dht.py  ir_blaster.py
utilities/: temperature.py  tests_temperature.py
