[tool.poetry]
name = "remote-ac-client"
version = "0"
description = ""
authors = ["Matty Jorgensen <me@prplecake.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.1"
adafruit-circuitpython-dht = "^4.0.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-quotes = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

